force-app/main/default/objects/leaseworks__Invoice_Billing_Details__c/leaseworks__Invoice_Billing_Details__c.object-meta.xml
<CustomObject>
    <description>This object stores billing email addresses linked to an account for each invoice type. These details are utilized when sending emails through bulk invoicing.</description>
    <label>Invoice Billing Details</label>
    <nameField>
        <label>Invoice Billing Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Billing Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>