force-app/main/default/objects/leaseworks__Invoice_Billing_Details__c/fields/leaseworks__Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account to which the billing details is associated</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Billing Details</relationshipLabel>
    <relationshipName>Invoice_Billing_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>