force-app/main/default/objects/leaseworks__Invoice_Billing_Details__c/fields/leaseworks__BCC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__BCC_Email_Address__c</fullName>
    <description>Email address for the Bcc recipient. For multiple recipients, each email address is separated with a comma.</description>
    <inlineHelpText>Enter valid Bcc email address(es). Use commas to separate each address.</inlineHelpText>
    <label>Bcc Email Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>