force-app/main/default/objects/leaseworks__Invoice_Billing_Details__c/fields/leaseworks__Default__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the email addresses defined on this record as default email addresses used for sending any type of invoice.</description>
    <inlineHelpText>Please check this box if you would like the email addresses defined here as default email addresses used for sending any type of invoice.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>