force-app/main/default/objects/leaseworks__Invoice_Billing_Details__c/fields/leaseworks__Email_Address__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Email_Address__c</fullName>
    <description>Email address for the primary recipient. For multiple recipients,  each email address is separated with a comma.</description>
    <inlineHelpText>Enter the email address for primary recipient. For multiple recipients, use commas to separate each address.</inlineHelpText>
    <label>To Email Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>