force-app/main/default/objects/leaseworks__Invoice_Billing_Details__c/fields/leaseworks__Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Type__c</fullName>
    <description>Indicates the type of invoice for which this billing detail record is applicable.</description>
    <inlineHelpText>Please select the type of invoice for which this billing detail record is applicable.</inlineHelpText>
    <label>Invoice Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aircraft MR</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Non MR</fullName>
            </value>
            <value>
                <fullName>Deferred - Rent</fullName>
            </value>
            <value>
                <fullName>Deferred - MR</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>HL/SL-Rent</fullName>
            </value>
            <value>
                <fullName>HL/SL-MR</fullName>
            </value>
            <value>
                <fullName>HL/SL-SD</fullName>
            </value>
            <value>
                <fullName>Service Fee</fullName>
            </value>
            <value>
                <fullName>HL/SL-Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>